--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Sohib TABICHE1</span>.<br>
+                    Hi, I'm <span>Sohib TABICHE</span>.<br>
                     <span id="typed" style="color: var(--color-white);"></span>
                 </h1>
                 <p>
