--- a/fr.html
+++ b/fr.html
@@ -557,21 +557,31 @@
     </main>
 
     <div class="controls">
-        <div class="control active-btn" data-id="home" >
-            <i class="fas fa-home"></i>
-        </div>
+        <a href="#home"></a>
+            <div class="control active-btn" data-id="home" >
+                <i class="fas fa-home"></i>
+            </div>
+        </a>
+        <a href="#about">
         <div class="control" data-id="about">
             <i class="fas fa-user"></i>
         </div>
-        <div class="control" data-id="experience">
-            <i class="fas fa-briefcase"></i>
-        </div>
-        <div class="control" data-id="formation">
-            <i class="fas fa-graduation-cap"></i>
-        </div>
-        <div class="control" data-id="contact">
-            <i class="fas fa-envelope-open"></i>
-        </div>
+        </a>
+        <a href="#experience">
+            <div class="control" data-id="experience">
+                <i class="fas fa-briefcase"></i>
+            </div>
+        </a>
+        <a href="#formation">
+            <div class="control" data-id="formation">
+                <i class="fas fa-graduation-cap"></i>
+            </div>
+        </a>
+        <a href="#contact">
+            <div class="control" data-id="contact">
+                <i class="fas fa-envelope-open"></i>
+            </div>
+        </a>
     </div>
     <div class="theme-btn">
         <i class="fas fa-adjust"></i>
